--- a/Views/ImportFile/Index.cshtml
+++ b/Views/ImportFile/Index.cshtml
@@ -16,7 +16,7 @@
                 Author
             </th>
             <th>
-                Import Date
+                Version
             </th>
             <th>
                 Imported By
@@ -27,26 +27,37 @@
     <tbody>
         @foreach (var item in Model)
         {
+            @if(item.UserId == Context.Session.GetInt32("UserId")){
             <tr>
                 <td>
                     @Html.DisplayFor(modelItem => item.ImportedFile.Name)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.OriginalPublicFile.Author)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.ImportDate)
+                    @if(item.OriginalPublicFile != null && item.ImportDate < item.OriginalPublicFile.LastModified){
+                        <span style="color: orange;">
+                            New version released (@item.OriginalPublicFile.LastModified.ToString())
+                        </span>
+                    }
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.ImportedBy)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a> |
-                    <a asp-action="ManageProjects" asp-route-fileId="@item.Id" class="btn btn-primary">Use</a>
+                    <a asp-action="ManageProjects" asp-route-fileId="@item.Id" class="btn btn-primary">Use</a> 
+                    <a asp-action="Delete" asp-route-fileId="@item.Id" class="btn btn-danger">Delete</a> 
+                    @if(item.OriginalPublicFile != null && item.ImportDate < item.OriginalPublicFile.LastModified){
+                       
+                        <form asp-action="Update" method="post" style="display: inline;">
+                            <input type="hidden" name="fileId" value="@item.Id" />
+                            <button type="submit" class="btn btn-warning">Update</button>
+                        </form>
+                    }
                 </td>
             </tr>
+            }
         }
     </tbody>
 </table>
