--- a/Views/Project/Details.cshtml
+++ b/Views/Project/Details.cshtml
@@ -43,6 +43,18 @@
                                     data-is-shared="@isShared.ToString().ToLower()">
                                 @(isShared ? "Shared" : "Share")
                             </button>
+
+                            @if(isShared && file.Share != null && file.LastModified != file.Share.UpdateDate){
+                            <form asp-controller="PublicFiles" 
+                                asp-action="UpdateVersion" 
+                                method="post" 
+                                style="display:inline;">
+                                <input type="hidden" name="fileId" value="@file.Id" />
+                                <button type="submit" class="btn btn-sm btn-warning">
+                                    Update new version
+                                </button>
+                            </form>
+                            }
                         </td>
                     </tr>
                 }
