--- a/Views/User/Index.cshtml
+++ b/Views/User/Index.cshtml
@@ -6,7 +6,7 @@
 <p>You are logged in.</p>
 
 <form asp-action="Logout" method="post">
-    <button type="submit" class="btn btn-danger">Log out</button>
+    <button type="submit" class="btn btn-primary">Log out</button>
 </form>
 <form asp-action="DeleteAccount" method="post">
     <button type="submit" class="btn btn-danger">Delete account</button>
