--- a/Views/ImportFile/Delete.cshtml
+++ b/Views/ImportFile/Delete.cshtml
@@ -6,33 +6,21 @@
 
 <h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this import?</h3>
 <div>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Project)
+            @Html.DisplayNameFor(model => model.ImportedFile.Name)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Project.Description)
+            @Html.DisplayFor(model => model.ImportedFile.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ImportedFile)
+            @Html.DisplayNameFor(model => model.OriginalPublicFile.ModifiedBy)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ImportedFile.Id)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ImportDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ImportDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ImportedBy)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ImportedBy)
+            @Html.DisplayFor(model => model.OriginalPublicFile.ModifiedBy)
         </dd>
     </dl>
     
