--- a/Views/PublicFiles/Index.cshtml
+++ b/Views/PublicFiles/Index.cshtml
@@ -22,6 +22,7 @@
     <tbody>
         @foreach (var item in Model)
         {
+            @if(item.IsActive){
             var isImported = ImportedFileIds.Contains(item.AuthorOriginalFileId);
             <tr>
                 <td>@item.AuthorOriginalFile.Name</td>
@@ -62,6 +63,7 @@
                 </td>
                 }
             </tr>
+            }
         }
     </tbody>
 </table>
